force-app/main/default/objects/LogRecordFilter__mdt.object
<CustomObject>
    <description>Determine what log levels are logged and optionally, for what users. Asterisk &quot;*&quot; means all users.
Note: log writing access levels are based on least-restrictive principal.</description>
    <fields>
        <fullName>Active_Log_User__c</fullName>
        <description>The log record filtering applies only when this user is the active user. Use * for all users.</description>
        <label>Active Log User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicate whether this filter will be applied</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogLevelCsv__c</fullName>
        <description>CSV of log levels to be logged.</description>
        <inlineHelpText>INFO, DEBUG, WARN, ERROR</inlineHelpText>
        <label>Log Levels CSV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Log Record Filter</label>
    <pluralLabel>Log Record Filters</pluralLabel>
</CustomObject>